# ADS131M0x

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  idf_component.yml
examples/: integration_test_suite_espidf.c  isr_read_data.c  isr_read_data_main.c  read_chip_id_main.c
examples/isr_read_data/: CMakeLists.txt  visualize_adc.py
examples/isr_read_data/main/: CMakeLists.txt  isr_read_data_main.c
examples/read_chip_id/: CMakeLists.txt
examples/read_chip_id/main/: CMakeLists.txt  read_chip_id_main.c
examples/test_results/: adc_test_results.txt  visualize_adc.py
include/: ADS131M0X.h  ADS131M0XRegisters.h  ADS131M0XTypes.h  ADS131M0x.h  ADS131M0xLowLevel.h  ADS131M0xRegisters.h  ADS131M0xTypes.h  ads131m0x.h  ads131m0x_hal.h  ads131m0x_low_level.h  ads131m0x_registers.h  ads131m0x_regs.h  ads131m0x_types.h
main/: main.c
src/: ads131m0x.c
tests/: CMakeLists.txt  test_ads131m0x.c
